--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             </intent-filter>
         </activity>
 
+        <!-- Network Receiver -->
         <receiver
             android:name=".receiver.NetworkChangeReceiver"
             android:label="NetworkChangeReceiver">
@@ -37,6 +38,21 @@
                     tools:ignore="BatteryLife" />
             </intent-filter>
         </receiver>
+
+        <!--FCM service tag-->
+        <service android:name=".fcm.FirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <!--FCM 관련 정보-->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/notification_default_channel_id" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/noti_icon" />
     </application>
 
 </manifest>
